# prism

./: .gitignore  Dockerfile  Makefile  README  README.md  index.html  up.sh
.circleci/: config.yml
.github/workflows/: gh-pages.yml  release.yml  release4colab.yml  release_old.yml
doc/: README  changes.txt
doc/devel/: README  cpreds.txt  errors.txt  flag.txt  names.txt
doc/devel_tprism/: debug.md  flag.md
doc/manual/: Make.sh  Make_tprism.sh  manual.bib  manual.tex  tprism.bib  tprism_manual.tex
doc/manual/fig/: DTMC01.eps  alarm.eps  asia.eps  chmm.eps  daem.eps  hmm.eps  jasia.eps  nbayes.eps  rank_hmm01.eps
exs/: README
exs/base/: README  pdcg.psm
exs/base/jtree/: README
exs/base/noisy_or/: README
exs/crf/: linear_chain_crf.psm
exs/cyc/: README  dfa.psm  infix_pcfg.psm  prefix_pcfg.psm  prefix_pcfg_learn.psm  prefix_pcfg_learning.psm  rule.pl  simple_infix.psm
exs/exs_base/jtree/: README
exs/exs_fail/: README  chmm.psm
exs/exs_foc/: README  max
exs/exs_lin/: mc.psm  prefix_pcfg.psm
exs/exs_nonlin/: nonlin.psm
exs/fail/: README
exs/foc/: README  esieve  isa  pattern
exs/jtree/bn2prism/: README
exs/rank/: README  rank_hmm.psm
exs/tensor/: README.md  distmult_sample.psm  eval.py  eval_mnist.py  expl_graph.py  expl_train.py  mnist.psm  mnist_eval.py  pcfg.psm  rank_pbm.psm  run_mnist.sh  run_transitive_closure.sh  tprism.py  transitive_closure.psm
exs/tensor/addition/: README.md  mnist_addition.psm  mnist_eval.py  run.sh
exs/tensor/distmult_sample01/: README.md  distmult_sample.psm  run.sh
exs/tensor/distmult_sample02/: README.md  distmult_sample.psm  run.sh
exs/tensor/fb15k/: build_dataset.py  check_all.py  check_all_o.py  check_all_s.py  get_dataset.sh  make_all.py  mix.py  rel_mapping.py  run.sh  to_dat.py
exs/tensor/fb15k237/: check_mapping.py  get_dataset.sh  make_all.py  mix.py  run.sh  to_dat.py
exs/tensor/markov_chain/: README.md  markov_chain.psm  markov_chain_msw.psm  run.sh
exs/tensor/mlp/: mnist.psm  mnist_eval.py  run.sh  run_mnist.sh
exs/tensor/mlp0/: mnist.psm  run.sh
exs/tensor/mlp1/: mnist.psm  mnist_eval.py  run.sh
exs/tensor/neural_networks/: mnist.psm  mnist_eval.py  run_mnist.sh
exs/tensor/op/: base.py
exs/tensor/simulating_prism/: README.md  pcfg.psm  run.sh
exs/tensor/transitive_closure/: transitive_closure.psm
exs/tensor/transitive_closure01/: README.md  run.sh  run_transitive_closure.sh  (+1 more)
exs_fail/: agree.psm  german.psm
exs_foc/: even  str
exs_infix/: README  analyze.psm  dfa2.psm  nonlin.psm  rule.pl  simple_infix.psm
exs_lin/: mc.psm  prefix_pcfg.psm  rule.pl
exs_lin_em/: prefix_pcfg.psm  prefix_pcfg2.psm
exs_nonlin/: dfa.psm
src/c/: CMakeLists.txt  Makefile  Makefile.gmake  Makefile.nmake  README
src/c/bp4prism/: README
src/c/bp4prism/include/: bapi.h  basic.h  bprolog.h  extern_decl.h  frame.h  term.h
src/c/bp4prism/lib/: bp4prism-win32.lib
src/c/core/: Makefile.files  Makefile.gmake  README  bpx.c  bpx.h  error.c  error.h  fputil.c  fputil.h  gamma.c  glue.c  idtable.c  idtable_preds.c  idtable_preds.h  random.c  random.h  stuff.h  termpool.c  vector.c  xmalloc.c
src/c/makefiles/: Makefile.files  Makefile.opts.gmake  Makefile.opts.nmake  Makefile_lapack.files  README
src/c/mp/: Makefile.files  Makefile.gmake  mp_core.c  mp_em_aux.c  mp_em_ml.c  mp_em_preds.c  mp_em_vb.c  mp_flags.c  mp_preds.c  mp_sw.c
src/c/resource/: README
src/c/up/: Makefile.files  Makefile.gmake  Makefile.nmake  Makefile_lapack.files  README  arithmetic_ansi.h  arithmetic_sse_double.h  arithmetic_sse_float.h  crf_grd.h  crf_learn.c  crf_learn_aux.h  crf_rank.c  crf_rank.h  crf_viterbi.c  crf_viterbi.h  crfviterbi.c  cyc_em.cpp  cyc_em.h  cyc_vt_ml.c  cyc_vt_ml.cpp  cyc_vt_ml.h  cyc_vt_preds.c  cyc_vt_preds.h  em.h  em_aux.c  em_aux_ml.c  em_aux_vb.c  em_aux_vb.h  em_ml.c  em_preds.c  em_vb.c  feature.c  feature.h  flags.c  flags.h  graph.c  graph.h  graph_aux.c  hindsight.c  hindsight.h  (+51 more)
src/prolog/: Compile.sh  Makefile  Makefile.nofoc  README
testing/: test.sh  test_mp.sh  testing.txt
testing/irregular_programs/: direction_empty.psm
testing/programs/: alarm.psm  alarm_nor_basic.psm  alarm_nor_generic.psm  asia.psm  bloodABO.psm  bloodAaBb.psm  dcoin.psm  direction.psm  direction_empty.psm  hmm.psm  hmm_wc.psm  hmm_wc_incl.pl  hmm_wc_incl.psm  jasia.psm  jasia_a.psm  machines  noisy_or.pl  pdcg.psm  pdcg_c.psm  phmm.psm  plc.psm  sbn.psm  tictactoe.psm  votes.psm
tools/: anaconda_exp.sh  init_package.sh  make_package.sh  n1ge.mpprism  n1ge.upprism  stlab.sh
tools/bp4prism/: README.bp4prism  bp4prism-modify.sh  bp4prism-release.patch  bp4prism-release.sh  bp4prism.files  bp4prism.headers  bp4prism.libs  bp4prism.patch
tprism/: expl_graph.html  expl_pb2.html  index.html  loader.html  placeholder.html  search.js  torch_embedding_generator.html  torch_expl_graph.html  torch_tprism.html  torch_util.html  tprism.html  util.html
tprism/loss/: base.html  index.html  torch_standard_loss.html
tprism/op/: base.html  index.html  torch_standard_op.html
tprism/tprism/: constraint.html  expl_graph.html  expl_pb2.html  loader.html  loss.html  op.html  placeholder.html  torch_embedding_generator.html  torch_expl_graph.html  torch_tprism.html  torch_util.html  util.html
(+128 files in other folders)
